--- a/data_cleaning.Rmd
+++ b/data_cleaning.Rmd
@@ -63,6 +63,9 @@ arab3 %<>%
 
 arab3
 arab4
+
+
+
 ```
 
 # Recode Data
@@ -145,6 +148,8 @@ arab3 %<>%
         q1003t == 6 ~ 6,
     TRUE ~ as.numeric(q1003))
     ) %>% 
+  mutate(inf_us = ifelse(q7011 == 0 | q7011 > 5, NA, q7011)) %>% 
+  mutate(inf_eu = ifelse(q7012 == 0 | q7012 > 5, NA, q7012)) %>% 
   mutate(globalism = ifelse(q701b == 0 | q701b > 5, NA, q701b)) %>% 
   mutate(pray = ifelse(q6101 == 0 | q6101 > 5, NA, 6 - q6101)) %>% 
   mutate(quran = ifelse(q6106 == 0 | q6106 > 5, NA, 6 - q6106)) %>%
@@ -154,7 +159,7 @@ arab3 %<>%
   mutate(nodemoc = ifelse(q6071 == 0 | q6071 > 5, NA, q6071)) %>% 
   mutate(genderapartuni = ifelse4cat_rec(q6074)) %>% 
   mutate(coverup = ifelse4cat_rec(q6076)) %>% 
-  select(cntry, year, region, governorate, islamistparties , islamistgov, religinterfere, religleaders, religleadersinfl, seperation, religparty, religparty2, female, work, income,  age, educ, globalism, pray, quran, womanwork, womenleader, womeneduc, nodemoc, genderapartuni, coverup)
+  select(cntry, year, region, governorate, islamistparties , islamistgov, religinterfere, religleaders, religleadersinfl, seperation, religparty, religparty2, female, work, income,  age, educ, globalism, pray, quran, womanwork, womenleader, womeneduc, nodemoc, genderapartuni, coverup, inf_us, inf_eu, wt)
 
 
 
@@ -220,6 +225,8 @@ arab4 %<>%
         t1003 == 6 ~ 6,
     TRUE ~ as.numeric(q1003))
     ) %>% 
+  mutate(inf_us = ifelse(q7011 == 0 | q7011 > 5, NA, q7011)) %>% 
+  mutate(inf_eu = ifelse(q7012 == 0 | q7012 > 5, NA, q7012)) %>% 
   mutate(globalism = ifelse(q701b == 0 | q701b > 5, NA, q701b)) %>% 
   mutate(pray = ifelse(q6101 == 0 | q6101 > 5, NA, 6 - q6101)) %>% 
   mutate(quran = ifelse(q6106 == 0 | q6106 > 5, NA, 6 - q6106)) %>% 
@@ -229,7 +236,7 @@ arab4 %<>%
   mutate(nodemoc = ifelse(q6071 == 0 | q6071 > 5, NA, q6071)) %>% 
   mutate(genderapartuni = ifelse4cat_rec(q6074)) %>% 
   mutate(coverup = ifelse4cat_rec(q6076)) %>% 
-  select(cntry, year, region, governorate , islamistparties , islamistgov, religinterfere, religleaders, religleadersinfl, seperation, religparty, religparty2, female, work, income,  age, educ, globalism, pray, quran, womanwork, womenleader, womeneduc, nodemoc, genderapartuni, coverup)
+  select(cntry, year, region, governorate , islamistparties , islamistgov, religinterfere, religleaders, religleadersinfl, seperation, religparty, religparty2, female, work, income,  age, educ, globalism, pray, quran, womanwork, womenleader, womeneduc, nodemoc, genderapartuni, coverup, inf_us, inf_eu, wt)
 
 ```
 
@@ -250,19 +257,21 @@ table(arab$cntry)
 # Factor Analysis
 
 ```{r}
-f1 <- arab %>% 
-  select(islamistparties, islamistgov, 
-         religleaders, religleadersinfl) %>% 
-  fa(1, rotate = "promax",   
-        fm = "pa",
-        scores = "regression")           
-fa.diagram(f31)                                  
-f1              
+# f1 <- arab %>% 
+#   select(islamistparties, islamistgov, 
+#          religleaders, religleadersinfl) %>%
+#   # na.omit() %>% 
+#   psych::fa(1, rotate = "varimax",   
+#         fm = "pa",
+#         scores = "regression",
+#         weight = na.omit(arab$wt)  )         
+# fa.diagram(f1)                                  
+# f1              
 
 f2 <- arab %>% 
   select(islamistparties, islamistgov, 
          religleaders, religleadersinfl) %>% 
-  psych::pca() 
+  psych::pca(weight = arab$wt) 
 
 arab %>% 
   select(islamistparties, islamistgov, 
@@ -283,27 +292,28 @@ arab4 %>%
   na.omit() %>% 
   cor()  
 
-arab <- predict.psych(f1, arab %>% 
-  select(islamistparties, islamistgov, 
-         religleaders, religleadersinfl)) %>% 
-  tbl_df() %>% 
-  cbind(arab) %>% 
-  mutate(islamism_fa = PA1)
+# arab <- predict.psych(f1, arab %>% 
+#   select(islamistparties, islamistgov, 
+#          religleaders, religleadersinfl)) %>% 
+#   tbl_df() %>% 
+#   cbind(arab) %>% 
+#   mutate(islamism_fa = PA1)
 
 arab <- predict.psych(f2, arab %>% 
   select(islamistparties, islamistgov, 
          religleaders, religleadersinfl)) %>% 
   tbl_df() %>% 
-  cbind(arab) %>% 
-  mutate(islamism_pca = PC1)
+  transmute(islamism = PC1) %>% 
+  cbind(arab) 
+
 #%>% 
 #  ggplot(aes(islamism)) +
 #  geom_histogram() +
 #  facet_wrap(~cntry, scales = "free")
 
 #sjPlot::view_df(arab, show.frq = T, show.prc = T)
-
-cor.test(arab$PC1, arab$PA1)
+# 
+# cor.test(arab$PC1, arab$PA1)
 
 ```
 
@@ -346,39 +356,54 @@ arab %>%
   select(nodemoc, genderapartuni, coverup) %>% 
   psych::pca()
 
+arab %>% 
+  select(inf_eu, inf_us) %>% 
+  psych::pca()
+
+
 range01 <- function(x){(x - min(x, na.rm = T)) / (max(x, na.rm = T) - min(x, na.rm = T))}
 
 
 arab_reg <- arab %>% 
-  mutate(patriarchalvalues = womanwork + womenleader + womeneduc)  %>% 
-  mutate(personalpiety = pray + quran) %>% 
+  mutate(patriarchalvalues = range01(womanwork + womenleader + womeneduc))  %>% 
+  mutate(personalpiety = range01(pray + quran)) %>% 
+  mutate(antiwestern = range01(inf_eu + inf_us)) %>% 
+  mutate(islamism = range01(islamism) * 100) %>% 
+  mutate_at(vars(islamistparties:inf_eu), range01) %>% 
 #  mutate(islamism = scale(islamism)) %>% 
 #  mutate(islamism = scale(islamism)) %>% 
 #  mutate_if(.predicate = is.double, scale) 
-  mutate(liberalislam = nodemoc + genderapartuni + coverup) %>% 
-  mutate(cntryears = paste(cntry, year))
+  mutate(liberalislam = range01(nodemoc + genderapartuni + coverup)) %>% 
+  mutate(cntryears = paste(cntry, year)) %>% 
+  mutate(year_2016 = ifelse(year == 2016, 1, 0)) %>% 
+  mutate(year_2014 = ifelse(year == 2014, 1, 0)) %>% 
+  mutate(year_2013 = ifelse(year == 2013, 1, 0)) %>% 
+  mutate(year_2012 = ifelse(year == 2012, 1, 0)) 
 
+# arab_reg$islamism_fa <- as.numeric(range01(arab_reg$islamism_fa) * 100)
+# arab_reg$islamism_pca <- as.numeric(range01(arab_reg$islamism_pca) * 100)
+# 
+# arab_reg$income             <- as.numeric(scale(arab_reg$income))
+# arab_reg$age                <- as.numeric(scale(arab_reg$age))
+# arab_reg$educ               <- as.numeric(scale(arab_reg$educ)) 
+# arab_reg$globalism          <- as.numeric(scale(arab_reg$globalism))   
+# arab_reg$personalpiety      <- as.numeric(scale(arab_reg$personalpiety))       
+# arab_reg$patriarchalvalues  <- as.numeric(scale(arab_reg$patriarchalvalues))           
+# arab_reg$liberalislam       <- as.numeric(scale(arab_reg$liberalislam))     
+# 
+# hist(arab_reg$liberalislam)
+# 
+# 
+# arab_reg %>% 
+#   select(islamism_pca , female , work , income , age , educ , globalism , personalpiety , patriarchalvalues , liberalislam, cntry) %>% 
+#   descr()
+#   na.omit() %>% 
+#   select(cntry) %>% 
+#   table()
 
-arab_reg$islamism_fa <- as.numeric(range01(arab_reg$islamism_fa) * 100)
-arab_reg$islamism_pca <- as.numeric(range01(arab_reg$islamism_pca) * 100)
+table(arab$year, arab$cntry)
 
-arab_reg$income             <- as.numeric(scale(arab_reg$income))
-arab_reg$age                <- as.numeric(scale(arab_reg$age))
-arab_reg$educ               <- as.numeric(scale(arab_reg$educ)) 
-arab_reg$globalism          <- as.numeric(scale(arab_reg$globalism))   
-arab_reg$personalpiety      <- as.numeric(scale(arab_reg$personalpiety))       
-arab_reg$patriarchalvalues  <- as.numeric(scale(arab_reg$patriarchalvalues))           
-arab_reg$liberalislam       <- as.numeric(scale(arab_reg$liberalislam))     
-
-hist(arab_reg$liberalislam)
-
-
-arab_reg %>% 
-  select(islamism_pca , female , work , income , age , educ , globalism , personalpiety , patriarchalvalues , liberalislam, cntry) %>% 
-  descr()
-  na.omit() %>% 
-  select(cntry) %>% 
-  table()
+save(arab_reg, file = "data/arab_reg.Rdata")
 ```
 
 
@@ -386,13 +411,13 @@ arab_reg %>%
 
 ```{r}
 model0 <- arab_reg %>% 
-  lme4::lmer(islamism_pca ~ 1 + (1|cntry), data = .)
+  lme4::lmer(islamism ~ 1 + (1|cntry), data = .)
 
 icc(model0)
 
 model1a <- lme4::lmer(islamism_pca ~ female + work + income + age + educ + globalism + personalpiety + patriarchalvalues + nodemoc + genderapartuni + coverup + (1|cntry), data = arab_reg)
 
-model1b <- lme4::lmer(islamism_pca ~ female + work + income + age + educ + globalism + personalpiety + patriarchalvalues + liberalislam + (1|cntry), data = arab_reg)
+model1 <- lme4::lmer(islamism ~ female + work + income + age + educ + globalism + antiwestern + personalpiety + patriarchalvalues + liberalislam + year_2012 + year_2013 + year_2014 + (1|cntry), data = arab_reg, weights = wt)
 
 texreg::screenreg(model1)
 
